added some code voor adding blocks, shit doesnt work yet tho..

--- a/src/main/resources/assets/wme/lang/en_us.lang
+++ b/src/main/resources/assets/wme/lang/en_us.lang
@@ -1,5 +1,9 @@
 #Creative Tabs
 itemGroup.tab_core=Worst Mod Ever
 
-@Items
+#Items
 item.test_item.name=Test Item
+
+#Blocks
+tile.test_block.name=Test Block
+
