Tried tot add a 3D bagel model, no succes :((. Bagel code is present but does not work!

--- a/src/main/resources/assets/wme/lang/en_us.lang
+++ b/src/main/resources/assets/wme/lang/en_us.lang
@@ -3,6 +3,7 @@ itemGroup.tab_core=Worst Mod Ever
 
 #Items
 item.test_item.name=Test Item
+item.bagel_item.name=Bagel
 
 #Blocks
 tile.test_block.name=Test Block
